--- a/css/styles.css
+++ b/css/styles.css
@@ -542,6 +542,9 @@ img {
   margin-left: 16px;
 }
 .backdrop {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -590,12 +593,18 @@ img {
 .btn-modal:hover {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
 }
 .btn-modal:focus {
   background-color: #404bbf;
   border: none;
+  
+}
+.btn-modal:focus .form-svg-close {
   fill: #ffffff;
+}
+.btn-modal:hover .form-svg-close{
+  fill: #fff;
+}
 }
 .form-svg-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
